themes/default/css/style.css
/* ... */
div.comment-block h5 {
	padding:0px 0px 5px 0px;
	margin:0px;
	font-size:14px;
	text-transform: capitalize;
}

div.comment-block form { padding:0 0 0 10px; }


div.report-media-box-tabs { float:right;  }
div.report-media-box-tabs ul {
	list-style: none;
	padding: 0;
	margin: 0;
	float:left;
}

div.report-media-box-tabs li {
	display:inline;
	list-style-type:none;
	margin: 0 0 0 2px;
	text-align:right;
}

div.report-media-box-tabs a {
	display: inline-block;
	padding: 2px 7px;
	font-weight:bold;
	-webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;
	-webkit-border-bottom-left-radius: 0px; -webkit-border-bottom-right-radius: 0px; -moz-border-radius-bottomright: 0px; -moz-border-radius-bottomleft: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px;
	border-bottom:0;
}
div.report-media-box-tabs a:hover { text-decoration:none; cursor:pointer; color:#333; }
	
div.report-media-box-tabs .report-tab-selected { }
div.report-media-box-tabs .report-tab-selected a { background:#C0C2B8; color:#333; }
div.report-media-box-tabs .report-tab-selected a:hover { text-decoration:none; } 

div.report-media-box-content {
	border-top:2px solid #C0C2B8;
	clear: both;
	padding:5px 0px;
}


div.report-media-box {
}

/* Map Toggles */
ul.map-toggles { overflow:auto; }
ul.map-toggles li { display:none; float:right; list-style-type: none; }

ul.map-toggles li a, 
ul.map-toggles li a:active { display:inline-block; padding:3px 5px 3px 17px; outline:none; }

	a.wider-map		{ background:transparent url(../images/icon_sprite-white.gif) -4px -202px no-repeat;  }
	a.taller-map	{ background:transparent url(../images/icon_sprite-white.gif) -4px -221px no-repeat;  }
	a.shorter-map	{ background:transparent url(../images/icon_sprite-white.gif) -4px -241px no-repeat;  }
	a.smaller-map	{ background:transparent url(../images/icon_sprite-white.gif) -4px -182px no-repeat;  }
	
div.report-additional-reports {
	padding-top: 5px;
	border-bottom:1px dotted #C0C2B8;
}
div.report-additional-reports .rb_report {
    width: 350px;
}
div.report-additional-reports h4 {
	padding:0px 0px 5px 0px;
	margin:0px;
	font-size:14px;
	text-transform: capitalize;
}

div.report-additional-reports h5 { font-size:12px; margin:4px 120px 2px 0; }
div.report-additional-reports .r_date { font-size:10px; background:#f2f2f2 url(../images/icon_sprite-grey.gif) 0px -133px no-repeat; }
div.report-additional-reports .r_location { font-size:10px; padding:3px 0 3px 18px; color:#828784; }

div.report-details ul.details{
    list-style: none;
}

div.report-details ul.details li{
    list-style: none;
    border-bottom: #EEEEEE 1px solid;
    padding: 5px 0;
    color: #666666;
    font-size: 11px;
}

div.report-details ul.details li small{
    display: block;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 11px;
    margin: 0 0 5px 0;
}

div.report-details ul.details li a{
    background: #E2E2E2;
    padding: 1px 4px 2px 4px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    color: #004276;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 10px;
    text-decoration: underline;
}

div.report-details ul.details li a:hover{
    text-decoration: none;
}

.photos {
    font-size: 40px;
    padding: .3em;
}

.photos img {
    vertical-align: bottom;
}

/* reports description */
div.report-description{
    border: #E8E4DB 5px solid;
    border-top: 0;
    margin: 0px 30px 20px 30px;
}

div.report-description h5{
    margin: 10px 0px 0px 15px;
    padding: 0px;
    text-transform: uppercase;
    font-size:12px;
}

div.report-description h3{
    background: #C7C3BC;
    color: #393535;
    padding: 0;
    margin: 0 -5px;
    padding: 5px 10px;
}

div.report-description div.content{
    background: #F9F8F5;
    border: #DDDCDC 1px dashed;
    margin: 5px 15px 15px 15px;
    padding: 10px 15px;
    font-size: 14px;
}

div.report-description div.credibility{
    margin: 10px 0 0 20px;
}

div.report-description div.additional-reports{
    margin: 15px;
}

div.report-description div.additional-reports a{
    color: #004276;
    text-decoration: underline;
}

div.additional-reports{
	margin: 15px;
	padding: 0px;
}

/* table list */
table.table-list{
    width: 100%;
}

table.table-list, table.table-list td{
    border-collapse: collapse;
}

table.table-list thead th{
    color: #666666;
    padding: 5px;
    text-align: left;
    text-transform: uppercase;
    font-size: 11px;
}

table.table-list thead th.title{
    width: 60%;
}

table.table-list thead th.location{
    width: 20%;
}

table.table-list thead th.source{
    width: 20%;
}

table.table-list thead th.date{
    width: 15%;
}

table.table-list tbody tr td{
    padding: 5px;
    font-size: 11px;
    border-bottom: #EEEEEE 1px solid;
    vertical-align: top;
    word-break: break-all;
    overflow: hidden;
}

table.table-list tbody tr td a{
    color: #0099CC;
}

div.location{
    float: right;
    width: 302px;
}

div.report-map{
		margin-bottom:10px;
}
div.incident-notation{
    margin: 0 0 5px 0;
}

div.incident-notation ul{
    list-style: none;
    float: right;
}

div.incident-notation ul li{
    list-style: none;
    float: left;
    margin-left: 20px;
    color: #999966;
    text-transform: uppercase;
    font-size: 10px;
    font-weight: bold;
}

/* media files */
.report-map .map-holder {
	clear:both;
	width:348px;
	height:350px;
	border: 1px solid #C0C2B8;
	border-bottom:2px solid #C0C2B8;
}


.more{
    float: right;
    margin: 10px 10px 10px 10px;
    color: #004276;
    font-weight: bold;
    text-decoration: underline;
}

.swatch {
    float:left;
    height:16px;
    margin-right: 8px;
    width:16px;
    border:1px solid white;
}

.category-title {
    padding-left: 0;
}

/* -----------------------------------------------------------
	11. UI Slider
------------------------------------------------------------*/
/*-----UI Slider CSS-----*/
.ui-slider {clear: both; top: 5px;}
/* ... */

